--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -48,4 +48,86 @@ textarea {
 
 select {
   margin-top: 20px;
+}
+
+.custom-container {
+  margin-top: 20px;
+}
+
+.custom-paper {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.custom-title {
+  color: #1976d2;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.custom-textfield {
+  margin-bottom: 20px;
+}
+
+.custom-button {
+  width: 100%;
+}
+
+.custom-error {
+  margin-bottom: 20px;
+  color: #dc004e;
+}
+
+.custom-select .MuiSelect-select {
+  padding: 10px;
+} */
+
+
+/* App.css */
+.custom-container {
+  margin-top: 40px;
+}
+
+.custom-paper {
+  padding: 30px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+.custom-title {
+  color: #007bff;
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: 600;
+}
+
+.custom-textfield {
+  margin-bottom: 20px;
+}
+
+.custom-button {
+  width: 100%;
+  height: 50px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+
+.custom-button:hover {
+  background-color: #0056b3;
+}
+
+.custom-error {
+  margin-bottom: 20px;
+  color: #dc004e;
+}
+
+.custom-select .MuiSelect-select {
+  padding: 10px;
 }
